# agent-gaia-base

./: .env.example  .gitignore  CLAUDE.md  FIX_JSON_PARSING.md  FIX_WEB_CONTENT_PARAMS.md  README.md  WEB_CONTENT_SKILL_IMPROVEMENT.md  main.py  mcp_servers.json  pyproject.toml  run.py
.claude/: settings.local.json
.github/workflows/: type-check.yml
.serena/: project.yml
docs/: test-session-history-loading.md
docs/design/: 2026-03-18-skills-and-workspace-design.md  2026-03-20-multi-project-session-management.md  2026-03-20-multi-project-session-ui-design.md
docs/plans/: 2026-03-11-ai-agent-mvp.md  2026-03-11-react-agent-design.md  2026-03-12-multi-modal-tools.md  2026-03-12-react-agent-implementation.md  2026-03-12-react-agent-streaming-integration.md  2026-03-13-langsmith-trace-integration.md  2026-03-14-action-space-refactor.md  2026-03-14-google-search-tool-description-design.md  2026-03-14-google-search-tool-description-improvement.md  2026-03-14-python-typing-integration.md  2026-03-14-react-memory-design.md  2026-03-16-zhipu-web-search-integration.md  2026-03-18-skills-system-implementation.md  2026-03-20-multi-project-session-management.md  2026-03-20-multi-project-session-ui-implementation.md  2026-03-21-fix-session-history-loading.md  2026-03-23-mcp-client-integration.md  2026-03-24-local-trace-system-implementation.md
docs/specs/: 2026-03-24-local-trace-system-design.md
examples/: memory_demo.py
scripts/: README.md  _common.py  cleanup_duplicate_projects.py  test_all.py  test_audio_parse.py  test_google_search.py  test_image_analysis.py  test_react_debug.py  test_skills_e2e.py  test_web_content.py
skills/audio-parse/: SKILL.md
skills/image-analysis/: SKILL.md
skills/mcp/get_repo_structure/: SKILL.md
skills/mcp/read_file/: SKILL.md
skills/mcp/search_doc/: SKILL.md
skills/mcp/webReader/: SKILL.md
skills/mcp/web_search_prime/: SKILL.md
skills/web-content/: SKILL.md
skills/web-search/: SKILL.md
src/ai_agent/: __init__.py
tests/: conftest.py
tests/e2e/: __init__.py  test_stream_endpoint.py
tests/integration/: test_api_chat.py  test_memory_integration.py  test_memory_real_api.py  test_react_agent_live.py  test_react_integration.py  test_react_real_api.py  test_real_api.py  test_trace_integration.py  test_trace_llm_real.py  test_trace_react_real.py  test_trace_tool_real.py
tests/manual/: test_session_api_integration.py
(+132 files in other folders)
